# graspologic

./: CONTRIBUTING.md  pyproject.toml
.github/workflows/: build.yml  publish.yml
graspologic/: version.py
tests/partition/: test_leiden.py
