[project]
name = "graspologic"
dynamic = ["version"]
description = "A set of Python modules for graph statistics"
readme = "README.md"
requires-python = ">=3.9,<3.15"
license = { text = "MIT" }
authors = [
    { name = "Eric Bridgeford" },
    { name = "Jaewon Chung", email = "j1c@jhu.edu" },
    { name = "Benjamin Pedigo" },
    { name = "Bijan Varjavand" },
]
maintainers = [
    { name = "Dax Pryce", email = "daxpryce@microsoft.com" },
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Mathematics",
]
dependencies = [
    "anytree>=2.12.1,<3.0.0",
    "beartype>=0.20.0,<1.0.0",
    "future>=1.0.0,<2.0.0",
    "gensim>=4.3.3,<5.0.0",
    "graspologic-native>=1.2.1,<2.0.0",
    "hyppo>=0.5.2,<0.6.0",
    "joblib>=1.4.2,<2.0.0",
    "matplotlib>=3.8.4,<4.0.0",
    "networkx>=3.0,<4.0",
    "numpy>=1.26.4,<2.0.0",
    "pot>=0.9,<0.10.0",
    "scikit-learn>=1.4.2,<2.0.0",
    "scipy>=1.12.0,<2.0.0",
    "seaborn>=0.13.2,<0.14.0",
    "statsmodels>=0.14.2,<0.15.0",
    "typing-extensions>=4.4.0,<5.0.0",
    "umap-learn>=0.5.6,<0.6.0",
]

[project.urls]
Repository = "https://github.com/graspologic-org/graspologic"

[build-system]
requires = ["hatchling>=1.25.0", "hatch-vcs>=0.4.0"]
build-backend = "hatchling.build"

[tool.hatch.version]
source = "vcs"

[tool.hatch.build.targets.wheel]
packages = ["graspologic"]

[tool.hatch.build.targets.sdist]
exclude = ["tests"]

[tool.uv]
default-groups = ["dev"]

[dependency-groups]
dev = [
    "ipykernel>=6.0,<7.0",
    "ipython>=8.8,<9.0",
    "mypy>=1.10.0,<2.0.0",
    "nbsphinx>=0.9.4,<0.10.0",
    "numpydoc>=1.1.0,<2.0.0",
    "pandoc>=2.3.0,<3.0.0",
    "pipdeptree>=2.20.0,<3.0.0",
    "poethepoet>=0.26.1,<0.27.0",
    "pytest>=8.2.0,<9.0.0",
    "pytest-cov>=5.0.0,<6.0.0",
    "ruff>=0.4.4,<0.5.0",
    "sphinx>=7.3.7,<8.0.0",
    "sphinx-rtd-theme>=2.0.0,<3.0.0",
    "sphinxcontrib-rawfiles>=0.1.1,<0.2.0",
    "testfixtures>=8.2.0,<9.0.0",
]

[tool.poe.tasks]
_sort_imports = "ruff check --select I --fix . --preview"
_format_code = "ruff format  . --preview"
static_checks = 'ruff check . --preview'
clean = "rm -rf docs/_build"
type_check = "mypy ./graspologic"
fix = "ruff  --preview check --fix ."
fix_unsafe = "ruff check --preview --fix --unsafe-fixes ."

# Formatting 
format = ['_sort_imports', '_format_code']

# Docs Tasks
docs = "sphinx-build -W -a docs/ docs/_build/html"
docsWithTutorials = "sphinx-build -W -t build_tutorials -a docs/ docs/_build/html"

# Testing Tasks
tests = "pytest tests"
test_only = "pytest -s -k"
coverage = "python -m pytest --co --cov=graspologic graspologic tests"
fast_test = "pytest tests --ignore=tests/test_latentdistributiontest.py --ignore=tests/test_latentpositiontest.py"

lint = ["static_checks", "type_check"]
validate = ["lint", "coverage", "docs", "tests"]


[tool.ruff.lint]
select = [
    "E4",
    # "E7",
    "E9",
    "W291",
    "YTT",
    "T10",
    "ICN",
    "INP",
    "Q",
    "RSE",
    "SLOT",
    "INT",
    "FLY",
    "LOG",
    "C90",
    # "T20",
    # "D",
    # "RET",
    # "PD",
    # "N",
    # "PIE",
    # "SIM",
    # "S",
    # "G",
    # "ERA",
    "ASYNC",
    # "TID",
    # "UP",
    # "SLF",
    # "BLE",
    # "C4",
    "I",
    # "F",
    # "A",
    # "ARG",
    # "PTH",
    # "RUF",
    # "B",
    "TCH",
    # "DTZ",
    # "PYI",
    #"PT",
    # "EM",
    # "TRY",
    # "PERF",
    # "CPY",

    # "FBT", # use named arguments for boolean flags
    # "TD", # todos
    # "FIX", # fixme
    # "FURB" # preview rules
    # ANN # Type annotations, re-enable when we get bandwidth
]
ignore = [
    # Deprecated Rules
    "ANN101",
    "ANN102",
    # Conflicts with interface argument checking
    "ARG002",
    "ANN204",
    # TODO: Inspect these pandas rules for validity
    "PD002", # prevents inplace=True
    # TODO RE-Enable when we get bandwidth
    "PERF203", # Needs restructuring of errors, we should bail-out on first error
    "C901",    # needs refactoring to remove cyclomatic complexity
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["S", "D", "ANN", "T201", "ASYNC", "ARG", "PTH", "TRY", "SLF"]
"docs/*" = ["INP001"]
"*.ipynb" = ["T201"]

[tool.ruff.lint.pydocstyle]
convention = "numpy"
